@@ -1,3 +1,7 @@
+2009-01-22  Scott Ellington  <scott.ellington@gmail.com>
+
+	* AssemblyInfo.cs: bump version to 0.3
+
 2009-01-16  Scott Ellington  <scott.ellington@gmail.com>
 
 	* Xml/Serialization/MapSerializer.cs: fix utf-8 output
